--- a/daw/bdUno/bdUnoUno.html
+++ b/daw/bdUno/bdUnoUno.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../bdUno/indiceBdUno.html">Bases de Datos I</a>
+                <a href="../dAw.html">Bases de Datos I</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -47,7 +47,7 @@
                 <li>Necesita un espacio considerable en la memoria de la computadora, además del espacio requerido en el disco duro.</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -128,7 +128,7 @@
             </ul>
             <p>Por el criterio de la ubicación, podemos dividir las bases de datos en centralizadas y distribuidas.</p>
             <div class="menuOpcional">
-                <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -224,7 +224,7 @@
                 <li><strong>In-Line:</strong> no añade la definición de los datos hasta que no se ejecuta.</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -232,7 +232,7 @@
             <h3 class="subTitulo" id="subCinco">ANSI/X3/SPARC. Estándares y niveles</h3>
 
             <div class="menuOpcional">
-                <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -240,7 +240,7 @@
             <h3 class="subTitulo" id="subSeis">Modelos de BBDD. Tipos: jerárquico, red, relacional y orientado a objetos</h3>
             
             <div class="menuOpcional">
-                <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -248,7 +248,7 @@
             <h3 class="subTitulo" id="subSiete">Bases de datos centralizadas y distribuidas</h3>
 
             <div class="menuOpcional">
-                <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
