--- a/daw/dwEntornoCliente/dwEC_Cinco.html
+++ b/daw/dwEntornoCliente/dwEC_Cinco.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../dwEntornoCliente/indice_dwEc.html">Desarrollo web en Entorno de Cliente</a>
+                <a href="../dAw.html">Desarrollo web en Entorno de Cliente</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -321,7 +321,7 @@
             <p>Este modelo se decanta por una posición intermedia en la que se supone que, al producirse un evento en su modelo de eventos, primero se producirá una fase de captura hasta que consiga llegar al elemento de destino.</p>
             <p>Ya se puede producir la fase de burbujeo hacia arriba. Este modelo está definido como estándar, por lo que todos los navegadores lo deberían seguir para ser compatibles entre ellos.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -418,7 +418,7 @@
             <p>Es conveniente restablecer el formulario con los datos que utilizamos inicialmente. El método <b>reset()</b>, o podemos introducir botones HTML tipo <b>reset</b> en el propio objeto formulario.</p>
           
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -435,7 +435,7 @@
             <h4 class="apartado">Modificar el comportamiento de un formulario</h4>
             <p>Los elementos de los formularios tienen unas acciones predeterminadas por defecto. Es posible modificar el comportamiento de estos elementos y evitar que realicen su función habitual.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -502,7 +502,7 @@
                 </code>
             </pre>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -715,7 +715,7 @@
             <p>Este objeto RegExp cuenta con sus propias propiedades y métodos.</p>
           
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
