--- a/daw/dwEntornoCliente/dwEC_Cuatro.html
+++ b/daw/dwEntornoCliente/dwEC_Cuatro.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../dwEntornoCliente/indice_dwEc.html">Desarrollo web en Entorno de Cliente</a>
+                <a href="../dAw.html">Desarrollo web en Entorno de Cliente</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -429,7 +429,7 @@
                 </code>
             </pre>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -519,7 +519,7 @@
                 </code>
             </pre>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
