--- a/daw/dwEntornoCliente/dwEC_Dos.html
+++ b/daw/dwEntornoCliente/dwEC_Dos.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../dwEntornoCliente/indice_dwEc.html">Desarrollo web en Entorno de Cliente</a>
+                <a href="../dAw.html">Desarrollo web en Entorno de Cliente</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -65,7 +65,7 @@
             <p>Las funciones para la conversión de cadenas de caracteres en datos numéricos son: <b>parseInt()</b> y <b>parseFloat()</b>.</p>
             <p>El proceso contrario es mucho más sencillo, ya que lo ejecuta el compilador al detectar las cadenas de caracteres como tipo por defecto. Pasar un tipo entero a cadena de caracteres, lo único que debemos hacer es concatenar una cadena vacía al principio de la variable.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -191,7 +191,7 @@
                 </tbody>
             </table>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -216,7 +216,7 @@
                 |= ˆ= []</p>
             <p>Asigna el valor a la derecha de la expresión a la variable que está a la izquierda.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -420,7 +420,7 @@
                 </code>
             </pre>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -549,7 +549,7 @@
                 </tbody>
             </table>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -698,7 +698,7 @@
                 </code>
             </pre>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -717,7 +717,7 @@
                 </code>
             </pre>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -752,7 +752,7 @@
             <p class="nota">Para crear cualquier página web, solo necesitaremos un editor de texto y un navegador web.</p>
             <p>Existen distintos navegadores, Internet Explorer, Mozilla FireFox y Google Chrome.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
