--- a/daw/dwEntornoCliente/dwEC_Seis.html
+++ b/daw/dwEntornoCliente/dwEC_Seis.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../dwEntornoCliente/indice_dwEc.html">Desarrollo web en Entorno de Cliente</a>
+                <a href="../dAw.html">Desarrollo web en Entorno de Cliente</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -220,7 +220,7 @@
             </table>
             <p>Con todas estas propiedades y métodos ya es posible acceder a los nodos del árbol y a la jerarquía, así como crear, modificar o eliminar nodos.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -285,7 +285,7 @@
             <p>Cuando estemos creando <b>nodos de elementos</b>, el elemento debe estar <b>en minúsculas</b>. Si bien HTML no es sensible a máyusculas y minúsculas, XHTML sí que lo es y, por lo tanto, el elemento deberá ir en minúsculas.</p>
             <p>Se utilizarán los métodos createElement(), createTextNode() y appendChild(), que nos permiten crear un elemento, un nodo de texto y añadir un nuevo nodo hijo.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -331,7 +331,7 @@
                 </code>
             </pre>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
