--- a/daw/dwEntornoCliente/dwEC_Tres.html
+++ b/daw/dwEntornoCliente/dwEC_Tres.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../dwEntornoCliente/indice_dwEc.html">Desarrollo web en Entorno de Cliente</a>
+                <a href="../dAw.html">Desarrollo web en Entorno de Cliente</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -671,7 +671,7 @@
                 </tbody>
             </table>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -907,7 +907,7 @@
             </pre>
             <p>El primer alert nos devolverá false, ya que la variable mapa devolverá array, como comprobamos en el segundo alert, el cual nos devuelve true.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -935,7 +935,7 @@
                 </code>
             </pre>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -986,7 +986,7 @@
             </table>
             <p>Los valores height y width se indican en píxeles. Para el resto de los elementos, utilizaremos el 0 o el 1 para tomar estas decisiones.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -1002,7 +1002,7 @@
                 </code>
             </pre>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -1038,7 +1038,7 @@
                 </code>
             </pre>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -1112,7 +1112,7 @@
             </table>
             <p>Cabe destacar que el uso de los marcos en HTML no se recomienda. Por eso este <b>elemento está en deshuso</b>.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -1183,7 +1183,7 @@
             </pre>
             <p>Al indicar una fecha anterior a la actual, la cookie queda caducada y el navegador automáticamente la eliminará.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
