--- a/daw/dwEntornoCliente/dwEC_Uno.html
+++ b/daw/dwEntornoCliente/dwEC_Uno.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../dwEntornoCliente/indice_dwEc.html">Desarrollo web en Entorno de Cliente</a>
+                <a href="../dAw.html">Desarrollo web en Entorno de Cliente</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -69,7 +69,7 @@
                 </tr>
             </table>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -87,7 +87,7 @@
                 <li><b>Subsistema de persistencia de datos:</b> almacena diferentes tipos de datos para los principales subsistemas del navegador, como historiales de navegación, mentenimiento de sesiones de usuario o preferencias de configuración del navegador. A nivel más bajo, también almacenan certificados de seguridad y cookies.</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -108,7 +108,7 @@
                 <li>Modificar la forma dinámica los estilos y contenidos en los navegadores.</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -116,7 +116,7 @@
             <h3 class="subTitulo" id="subCinco">1.5.- Programación de guiones</h3>
             <p>Se puede colocar en uno de los dos sitios posibles, entre las etiquetas head o entre las etiquetas body. La etiqueta contenedora empieza por script y termina por /script.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -128,7 +128,7 @@
             <p>Para cargar más de un fichero tendremos que repetir la etiqueta script pero cambiando el nombre del fichero fuente. Podemos utilizar la <b>ruta relativa</b> como la <b>ruta remota</b>.</p>
             <p>Los navegadores que no soporte los scripts debemos informar al usuario. La marca que se deben utilizar para esta situación es noscrpt.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -147,7 +147,7 @@
             </ul>
             <p>La estandarización dle consorcio <b>W3C</b> es la que rige las validaciones, en su dirección web es donde podemos acceder para esta operación.</p>
             <div class="menuOpcional">
-                <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
