--- a/daw/entornoDesarrollo/eD_Dos.html
+++ b/daw/entornoDesarrollo/eD_Dos.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html">Entorno de Desarrollo</a>
+                <a href="../dAw.html">Entorno de Desarrollo</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -60,7 +60,7 @@
                 <li><b>Herramientas de mantenimiento:</b> Nos ayudan a gestionar y organizar la fase de mantenimiento del software, reportando errores o analizando cuál puede ser la causa.</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
