--- a/daw/entornoDesarrollo/eD_Tres.html
+++ b/daw/entornoDesarrollo/eD_Tres.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html">Entorno de Desarrollo</a>
+                <a href="../dAw.html">Entorno de Desarrollo</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -66,7 +66,7 @@
                 <li>Análisis de valores límite</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -220,7 +220,7 @@
                 <li><b>Prueba de resistencia(stress):</b> Se lleva el sistema al límite de los recursos, sometiéndolo a cargas masivas. El objetivo es comprobar los extremos del sistema</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -358,7 +358,7 @@
                 <li>Si la estructura interna posee límites preestablecidos, nos aseguraremos de diseñar casos de prueba que ejerciten la estructura de datos en sus límites, primer y último elemento</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -422,9 +422,15 @@
                         L = 1 / D = 1 / 6 = 0,16
                 </code>
             </pre>
-          
+            <p>Otro tipo de métricas sirven para volver el mantenimiento de nuestro producto:</p>
+            <ul>
+                <li>Número de solicitudes para el mantenimiento correctivo: si hay un aumento en el reporte de fallos, quiere decir que se han introducido más errores que los que se han arreglado. El mantenimiento será mas costoso</li>
+                <li>Tiempo requerido para hacer un análisis del producto: indica el número de componentes del sistema que se ven afectados. Si el número es alto, el mantenimiento será costoso</li>
+                <li>Tiempo requerido para poder implementar los cambios: tiempo para modificar el aplicativo y su documentación. Si este tiempo es alto, el mantenimiento será más costoso</li>
+                <li>Número de peticiones de cambio: un aumento de esas solicitudes hará de nuestro aplicativo muy difícil de mantener</li>
+            </ul>
             <div class="menuOpcional">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
