--- a/daw/entornoDesarrollo/eD_Uno.html
+++ b/daw/entornoDesarrollo/eD_Uno.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html">Entorno de Desarrollo</a>
+                <a href="../dAw.html">Entorno de Desarrollo</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -87,7 +87,7 @@
             </ul>
             <p>Para que podamos realizar operaciones de lectura y escritura en una celda de memoria, se utilizan el RDM, el RIM y el DI. El decodificador de instrucción es el encargado de conectar la celda RDM con el registro de intercambio RIM, el cual posibilita que la trasferencia de datos se realice en un sentido u otro según sea de lectura o escritura.</p>
             <div class="menuOpcional">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -137,7 +137,7 @@
             </ul>
             <p>Las desventajas, puede ser que son más lentos que los ya compilados, debido a la capa intermedia.</p>
             <div class="menuOpcional">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -218,7 +218,7 @@
             <p>Las ventajas, destacar la facilidad para reutilizar el código, el trabajo en equipo o el mantenimiento del software.</p>
             <p>Una desventaja es que el concepto de un programador puede ser distinto a otros.</p>
             <div class="menuOpcional">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -852,7 +852,7 @@
                 <li>¿Cómo evolucionan esos costes a lo largo de vida del proyecto?</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -931,7 +931,7 @@
                 <li>3. La práctica: donde se ponen de manifiesto las buenas práctivas de desarrollo (gestión de los requisitos, modelado UML, verificación de calidad, etc).</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -952,7 +952,7 @@
                 <li><b>Enlazador:</b> el objetivo de esta herramienta es coger los objetos que se crean en los primeros pasos de la compilación, quitar los recursos que no necesitan y enlazar el código objeto con sus bibliotecas. El resultado es un archivo ejecutable.</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
