--- a/daw/fol/fol_Cinco.html
+++ b/daw/fol/fol_Cinco.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../fol/indice_fol.html">Formación y Orientación Laboral</a>
+                <a href="../dAw.html">Formación y Orientación Laboral</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -98,7 +98,7 @@
                 <li><b>Envejecimiento prematuro:</b> Aceleración del proceso normal de envejecimiento fisiológico y conduce a una muerte prematura. Provocado por un desgaste biológico como consecuencia de una fatiga crónica acumulada. Contaminantes químicos y físicos y otros agentes agresivos pueden originar cambios biológicos y generar el proceso de envejecimiento.</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -122,7 +122,7 @@
                 <li><b>Circustancias personales:</b> agresividad, abandono del compromiso laboral, depresión, irritabilidad...</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -191,7 +191,7 @@
                 <li>Para los fuegos clase F sería necesario un <b>agente extintor específico</b>, a base de acetato de potasio.</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -253,7 +253,7 @@
                 <li><b>Parásitos:</b> se trata de un grupo de seres vivos que viven a expensas de alimentarse de otros seres vivos a los que causan daños. Entre las enfermedades más comunes que producen destacan la anisakiasis, la teniasis, la sarna, etc.</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -288,7 +288,7 @@
                 <li>Organizar de forma adecuada el trabajo.</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -296,7 +296,7 @@
             <h3 class="subTitulo" id="subOcho">Riesgos genéricos en el ámbito profesional</h3>
             <p>Anexo - No se estudia</p>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -304,7 +304,7 @@
             <h3 class="subTitulo" id="subNueve">Daños para la salud ocasionados por los riesgos</h3>
             <p>Cualquier riesgo laboral no resuelto puede conducir a un <b>daño laboral</b>. Un daño es un estado de malestar, que puede ser físico o psíquico. Pueden estar relacionados con enfermedades.</p>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -312,7 +312,7 @@
             <h3 class="subTitulo" id="subDiez">Riesgos genéricos en el ámbito profesional</h3>
             <p>Anexo -  No se estudia.</p>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
