--- a/daw/fol/fol_Seis.html
+++ b/daw/fol/fol_Seis.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../fol/indice_fol.html">Formación y Orientación Laboral</a>
+                <a href="../dAw.html">Formación y Orientación Laboral</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -116,7 +116,7 @@
                 </tbody>
             </table>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -135,7 +135,7 @@
             <p><b>Instituto Nacional de Seguridad y Salud en el Trabajo</b>, un órgano técnico autónomo que depende administrativamente del Ministerio de Trabajo y Economía Social y que hace un trabajo muy importante en asesoramiento, estudio y formación de la prevención de los riesgos laborales.</p>
             <p><b>Inspección del Trabajo y Seguridad Social</b> se conoce como el órgano técnico dependiente del Ministerio de Trabajo y Economía Social. Tiene como funciones, en prevención de riesgos, vigilar el cumplimiento de la normativa sobre prevención de riesgos laborales, informar y asesorar a empresarios y trabajadores, elaborar los informes solicitados por los juzgados sociales, comprobar que las obligaciones asumidas por parte de los servicios de prevención se cumplen, informar a la autoridad laboral sobre los accidentes de trabajo mortales o graves y sobre las enfermedades profesionales y ordenar la paralización inmediata de trabajos en el caso de que exista riesgo grave e inminente para la salud y seguiridad de los trabajadores.</p>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -168,7 +168,7 @@
                 <li>Ante un riesgo que se considere intolerable, el trabajo se paralizará hasta que este se vea reducido. Si ni con el máximo de recursos posibles se consigue, el trabajo se termina prohibiendo.</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -203,7 +203,7 @@
             <p>La <b>responsabilidad penal</b>, regulada por el Código Penal, tiene como objetivo dar una tutela determinada contra cierta conductas que atenten contra el derecho del trabajador a tener una protección eficaz en cuanto a salud y seguridad laboral y que estén tipificadas como delito.</p>
             <p>Las sanciones las determinan los tribunales civiles o los tribunales penales.</p>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -271,7 +271,7 @@
             <p>El <b>comité de seguridad y salud</b> es el órgano colegiado y paritario de participación al que la empresa consulta de forma periódica y regular acerca de temas de prevención de riesgos laborales.</p>
             <p>Está integrado por los delegados de prevención y el empresario. Se constituye en empresas con 50 trabajadores o más, y se reúne de forma trimestral o siempre que una de ambas partes lo solicite. Los delegados sindicales y los técnicos de prevención también pueden asistir a las reuniones, aunque no disponen de voto (sí de voz).</p>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -317,7 +317,7 @@
             <p>Se establecerá una estructura organizativa y jerarquizada, dentro de la organización y personal, que fije las funciones y responsabilidades de todos.</p>
             <p>La implantación comprenderá, la formación y capacitación del personal, el establecimiento de mecanismos de información y la provisión de los medios y recursos para la aplicabilidad.</p>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
