--- a/daw/fol/fol_Siete.html
+++ b/daw/fol/fol_Siete.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../fol/indice_fol.html">Formación y Orientación Laboral</a>
+                <a href="../dAw.html">Formación y Orientación Laboral</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -85,7 +85,7 @@
                 <li>No puede sustituir a la información y formación de los trabajadores en el ámbito de la salud y seguridad laboral.</li>
             </ul>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -97,7 +97,7 @@
             <p><b>Evacuación:</b> se inicia cuando lo comunica el centro de comunicaciones. De forma ordenada, sin prisas ni aglomeraciones, por las vías de evacuación y bajo la dirección de los responsables designados.</p>
             <p>Estas son las intervenciones que deben realizarse en cada caso.</p>
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -222,7 +222,7 @@
 
 
             <div class="menuOpcional">
-                <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
