--- a/daw/plantillas/plantillaApuntes.html
+++ b/daw/plantillas/plantillaApuntes.html
@@ -77,7 +77,7 @@
         </ul>
           <!-- MENÚ OPCIONAL -->
         <div class="menuOpcional">
-            <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+            <a href="../dAw.html"><div class="botonO">Índice</div></a>
             <a href="../../index.html"><div class="botonO">Principal</div></a>
             <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
