--- a/daw/sistemas/sistemasCuatro.html
+++ b/daw/sistemas/sistemasCuatro.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="navtop">
-      <a href="../sistemas/indiceSistemas.html">Sistemas Informáticos</a>
+      <a href="../dAw.html">Sistemas Informáticos</a>
         <a href="../../index.html">Principal</a>
     </div>
   </header>
@@ -32,7 +32,7 @@
         </ul>
         <p>Cliente y servidor son elementos separados que establecen su comunicación mediante la red de comunicaciones y colaboran para completar tareas de forma conjunta. Cuando el cliente precisa un servicio, realiza una petición y el servidor le da una respuesta. El servidor recibirá y procesará la petición y le brindará el servicio requerido. Ejemplo, el servicio web que empleamos para navegar por internet.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -52,7 +52,7 @@
         <p>En Windows también podemos utilizar OpenLDAP.</p>
         <p>El sistema de Microsoft se refiere a su implementación del servicio de directorio en red como Active Directory. Este emplea varios protocolos, entre los que se encuentra LDAP. En Windows Server se instala por defecto, en Windows on podemos instalar Active Directory pero si gestionarlo remotamente a traves de la red mediante la aplicación Sitios y servicios de Active Directory.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -86,7 +86,7 @@
           Debemos contratar el servicio con una empresa. La administración se lleva a cabo de manera remota, a través del navegador web.
         </p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -113,7 +113,7 @@
         </ul>
         <p>En AD  podemos establecer distintos tipos de grupos. Se emplean para reunir a usuarios, equipos y otros tipos de cuenta en entidades administrables.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -137,7 +137,7 @@
         <p>La instalación de los servicios de red como los dominio crea grupos de usuarios por defecto y se les asigna un usuario administrador del dominio, el cual tendrá plenos privilegios.</p>
         <p>Las cuentas de usuarios del dominio suelen estar vinculadas a ciertos equipos para mejorar el rendimiento de la red, aunque con ellas podemos acceder a cualquier equipo que esté conectado al dominio, teniendo siempre los permisos necesarios.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -157,7 +157,7 @@
         <p>En caso de un perfil móvil obligatorio, tenemos que introducir la información correspondiente a la ruta del acceso en el perfil, le agregamos la extensión .man.</p>
         <p>Para convertir un perfil móvil en uno obligatorio accedemos al archivo ntuser.dat,  y le cambiamos la extensión por ntuser.man.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -190,7 +190,7 @@
           <li><strong>/etc/bash.bashrc</strong>: igual que el anterior aunque para consolas no logueadas. El equivalente para variables de usuario es /.bashrc</li>
         </ul>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -233,7 +233,7 @@
         </ul>
         <p>Es importante que tengamos presente que los grupos pueden anidarse entre sí. El anidamiento de grupos consiste en hacer un grupo miembro de otro, de tal modo que utilice sus características.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -272,7 +272,7 @@
           </li>
         </ol>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
