--- a/daw/sistemas/sistemasDos.html
+++ b/daw/sistemas/sistemasDos.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="navtop">
-      <a href="../sistemas/indiceSistemas.html">Sistemas Informáticos</a>
+      <a href="../dAw.html">Sistemas Informáticos</a>
         <a href="../../index.html">Principal</a>
     </div>
   </header>
@@ -67,7 +67,7 @@
           <li><strong>Gestión simplificada de usuarios:</strong> Podemos crear grupos que reúnan una serie de características en lo referente a privilegios de acceso.</li>
         </ul>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -99,7 +99,7 @@
         </ul>
         <p>El perfil se crea automaticacmente al darlos de alta o cuando inician sesión por primera vez. No obstante, el administrador podrá crear perfiles idóneos y asignarlos las cuentas.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -145,7 +145,7 @@
         </ul>
         <p>Señalar que la versión 4 del protocolo IP (IPv4) permite algo más de 4000 millones de direcciones distintas. Los S.O. más recientes incorporan el IPv6 que admite muchas más direcciones.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -165,7 +165,7 @@
         </ol>
         <p>Una vez configurada la dirección IP, máscara de subred y servidores DNS, aceptar. La información se guarda en los archivos de configuración del sistema. La configuración de linux se almacena en /etc/network/interfaces.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -190,7 +190,7 @@
         </ul>
         <p>También es importante tener encuenta que si abandonamos el lugar desde el que nos conectarmos a la red, los archivos que se encuentren accesibles a través de ella dejarán de estar disponibles. Para solucionarlo tendremos que pulsar sobre el archivo o carpeta con el botón secundario del ratón y elegir <strong>Siempre disponible sin conexión</strong>.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -250,7 +250,7 @@
         </table>
         <p>Para mayor información consultaremos las páginas oficiales donde encontraremos información más detallada. Además de comandos más complejos, tenemos más opciones que disponen o el formato que tienen que cumplir pueden variar.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
