--- a/daw/sistemas/sistemasTres.html
+++ b/daw/sistemas/sistemasTres.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="navtop">
-      <a href="../sistemas/indiceSistemas.html">Sistemas Informáticos</a>
+      <a href="../dAw.html">Sistemas Informáticos</a>
         <a href="../../index.html">Principal</a>
     </div>
   </header>
@@ -45,7 +45,7 @@
         </ul>
         <p>La elección del tipo de sistema de archivos suele realizarse tras particionar el disco, en el momento de formatearlo. Podemos crear, eliminar y modificar las particiones usando herramientas del propio S.O. Un mismo disco físico puede tener varias particiones, y el S.O. tratará cada una como un disco independiente.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -116,7 +116,7 @@
         <p>Cabe destacar que en la mayoría de las instalaciones ya se crearán por defecto o a nuestra elección. Nos ofrecerán la posibilidad de crear o anclar los accesos directos en diferentes zonas según nuestro S.O.</p>
         <p>En los navegadores web hay que configurarlos, la mayoría nos ofrecen la opción de enlazar o importar marcadores que hayamos elegido o guardado en otros navegadores. Este proceso se puede realizar desde la opción de sincronizar el usuario o importar desde su configuración.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -236,7 +236,7 @@
         <p>Como alternativa podemos utilizar software especívico para búsquedas como FileSearch que nos dará más opciones.</p>
         <p>En Linux, las búsquedas por interfaz gráfica o de texto son similares. El comando find desde la consola. Interfaces como Nautilus, Krusader, Konqueror, etc...</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -257,7 +257,7 @@
         <p>Para el desmontaje, utilizaremos umount:</p>
         <p>umount < dispositivo > </p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -284,7 +284,7 @@
         <p>Se debe tener en cuenta que los sistemas de ficheros están sometidos a constantes cambios, creación, borrado y modificaciones que a la larga provocan que los ficheros se fragmenten y surjan huecos sin información en nuestras particiones. Esto origina una relentización del acceso a los datos. Es conveniente que los desfragmentemos con regularidad. También podemos buscar errores.</p>
         <p>En las versiones más recientes de linux no es preciso desfragmentar las particiones. Si deseamos buscar errores usaremos el comando fsck.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
