--- a/daw/sistemas/sistemasUno.html
+++ b/daw/sistemas/sistemasUno.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="navtop">
-        <a href="../sistemas/indiceSistemas.html">Sistemas Informáticos</a>
+        <a href="../dAw.html">Sistemas Informáticos</a>
         <a href="../../index.html">Principal</a>
     </div>
   </header>
@@ -31,7 +31,7 @@
           <li><strong>Software</strong>: Debemos conocer el tipo de programa que se necesita, sus funcionalidades y la liciencia bajo la que se distribuye.</li>
         </ol>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -77,7 +77,7 @@
         <p>El sistema informático como equipo único o conjunto de equipos de red, la conectividad es un término clave. Referencia la capacidad de los equipos y dispositivos para conectarse entre sí.</p>
         <p>Todo sistema informático estará compuesto de hardware y software. En un sentido más amplio debemos añadir a los usuarios (Recursos humanos) y por supuesto, ls información.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -123,7 +123,7 @@
           <li><strong>Red inalámbrica</strong>: Ha supuesto una revolución en este ámbito, permite habilitar redes sin necesidad de cablearlas físicamente.</li>
         </ol>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -143,7 +143,7 @@
             <li><strong>Controladores o drivers:</strong> Permite que el sistema interactue con los dispositivos hardware del equipo. <br> La gestión se lleva a cabo a partir de ordenes que recibe el sistema operativo. Para introducirlas podemos usar la interfaz gráfica o la consola.</li>
           </ul>
           <div class="menuOpcional">
-            <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+            <a href="../dAw.html"><div class="botonO">Índice</div></a>
             <a href="../../index.html"><div class="botonO">Principal</div></a>
             <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -164,7 +164,7 @@
           <li><strong>Control de seguridad</strong>: Para tener en cuenta la seguridad del software, usuarios y la información almacenada en el sistema.</li>
         </ul>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -196,7 +196,7 @@
           <li><strong>Libres</strong>: Permiten la modificación del producto. Usar el programa libremente.</li>
         </ul>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -221,7 +221,7 @@
           <li><strong>Por volumen</strong>: Destinado a grandes usuarios (Empresas). Similar a OEM, pero sin afectar a nuevos equipos. Determina el número de equipos en los que se utilizará. El fabricante está autorizado para comprobarlo.</li>
         </ul>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -237,7 +237,7 @@
           <li><strong>Undidad de destino</strong>: La partición o disco óptimo será la que disponga de mayor rápidez en la lectura/escritura de datos. Es importante planificar que el S.O. y los archivos se encuentren en diferentes particiones. La instalación del S.O. conllevará la destrucción de los datos de la partición elegida, antes será vital realizar una copia de seguridad.</li>
         </ul>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -268,7 +268,7 @@
         <p>La desinstalación es el proceso inverso y el S.O. brinda herramientas para ello.</p>
         <p>Debemos señalar que las sucesivas instalaciones y desinstalaciones van dejando restos en los ficheros de configuración. Estos restos pueden incidir negativamente en el rendimiento.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -295,7 +295,7 @@
         </ul>
         <p>Dada su importancia lo ideal es respaldarlos en un momento en el que todo funcione correctamente.</p>
         <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
+          <a href="../dAw.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
