--- a/daw/Len_Marcas/lenMarCinco.html
+++ b/daw/Len_Marcas/lenMarCinco.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../Len_Marcas/indiceLen_Marcas.html">Lenguajes de marcas</a>
+                <a href="../dAw.html">Lenguajes de marcas</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
