--- a/daw/entornoDesarrollo/eD_Seis.html
+++ b/daw/entornoDesarrollo/eD_Seis.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html">Entorno de Desarrollo</a>
+                <a href="../dAw.html">Entorno de Desarrollo</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
@@ -28,7 +28,7 @@
             <h3 class="subTitulo" id="subDos">Diagramas de clases</h3>
           
             <div class="menuOpcional">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
@@ -36,7 +36,7 @@
             <h3 class="subTitulo" id="subTres">Herramientas para el diseño de diagramas</h3>
           
             <div class="menuOpcional">
-                <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
+                <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
