--- a/daw/proDos/proDosDiez.html
+++ b/daw/proDos/proDosDiez.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div class="navtop">
-                <a href="../proDos/indiceProDos.html">Programación II</a>
+                <a href="../dAw.html">Programación II</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
